--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,17 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navLinks {
+  display: flex;
+  padding: 24px;
+  min-height: 10vh;
+
+  a {
+    margin-right: 24px;
+    color: white;
+    font-weight: bold;
+    font-size: calc(8px + 2vmin);
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,13 +23,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
